# milatools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: custom_setup_slurm_action.yml
.github/custom_setup_slurm_action/: action.yml  slurm-playbook.yml
.github/workflows/: build.yml  full_cluster_tests.yml  publish.yml  slurm.yml  testing.yml
examples/: torch_imagenet.py
examples/torch/: distributed.py
milatools/: __init__.py  __version__.py  cmd_utils.py  commands.py  parallel_progress.py  profile.py  remote_v2.py  utils.py
milatools/cli/: __init__.py  __main__.py  code.py  code_command.py  commands.py  common.py  init.py  init_command.py  init_command_test.py  local.py  local_v1.py  login.py  mfa_remote.py  profile.py  remote.py  remote_v1.py  run.py  utils.py  vscode_utils.py
milatools/datasets/: CIFAR10.py  cached.py  split.py  torch.py
milatools/distributed/: __init__.py
milatools/torch/: checkpoint.py
milatools/torch/datasets/: CIFAR10.py  cached.py  transformed.py
milatools/torch/distributed/: __init__.py
milatools/utils/: __init__.py  compute_node.py  disk_quota.py  local_v1.py  local_v2.py  parallel_progress.py  remote_v1.py  remote_v2.py  runner.py  vscode_utils.py
milavision/: .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py
milavision/milavision/: __init__.py  _utils.py  _version.py  conftest.py  datamodules.py  datasets.py  datasets_test.py
milavision/milavision/envs/: local.py  mila.py
scripts/: windows_setup.ps1
tests/: conftest.py  test_parallel_progress.py  test_remote_v2.py
tests/cli/: common.py  conftest.py  test_code.py  test_code_command.py  test_commands.py  test_init.py  test_init_command.py  test_local.py  test_login.py  test_mila_init_ssh_config.py  test_profile.py  test_remote.py  test_run.py  test_slurm_remote.py  test_utils.py  test_vscode_utils.py
tests/cli/test_commands/: test_check_command_output_mila_docs_conda_.txt  test_check_command_output_mila_intranet_.txt  test_check_command_output_mila_intranet_idt_.txt  test_help_mila_.txt  test_help_mila_beluga_code_.txt  test_help_mila_cedar_code_.txt  test_help_mila_code_.txt  test_help_mila_docs_.txt  test_help_mila_forward_.txt  test_help_mila_init_.txt  test_help_mila_intranet_.txt  test_help_mila_narval_code_.txt  test_help_mila_serve_.txt  test_help_mila_serve_aim_.txt  test_help_mila_serve_connect_.txt  test_help_mila_serve_kill_.txt  test_help_mila_serve_lab_.txt  test_help_mila_serve_list_.txt  test_help_mila_serve_mlflow_.txt  test_help_mila_serve_notebook_.txt  test_help_mila_serve_tensorboard_.txt  test_invalid_command_output_mila_.txt  test_invalid_command_output_mila_code_.txt  test_invalid_command_output_mila_code___boo_.txt  test_invalid_command_output_mila_forward_.txt  test_invalid_command_output_mila_search_conda_.txt  test_invalid_command_output_mila_serve_.txt
tests/cli/test_init/: test_setup_passwordless_ssh_access_to_cluster_localhost_accept_registering_key_not_already_setup_.md  test_setup_ssh_empty_confirm_changes_no_drac_.md  test_setup_ssh_empty_reject_changes_drac_.md  test_setup_ssh_empty_reject_changes_no_drac_.md  test_setup_ssh_has_comment_and_entry_confirm_changes_drac_.md  test_setup_ssh_has_comment_and_entry_reject_changes_drac_.md  test_setup_ssh_has_comment_and_entry_reject_changes_no_drac_.md  test_setup_ssh_has_comment_and_entry_with_extra_space_reject_changes_drac_.md  test_setup_ssh_has_comment_reject_changes_no_drac_.md  test_setup_ssh_has_different_indent_confirm_changes_drac_.md  test_setup_ssh_has_different_indent_confirm_changes_no_drac_.md  test_setup_ssh_has_different_indent_reject_changes_no_drac_.md  test_setup_vscode_settings_accept_None_.md  test_setup_vscode_settings_accept_initial_settings1_.md  test_setup_vscode_settings_accept_initial_settings2_.md  (+9 more)
tests/integration/: conftest.py  test_code.py  test_code_command.py  test_code_v1.py  test_init.py  test_run.py  test_serve_command.py  test_slurm_remote.py  test_sync_command.py
tests/torch/: test_checkpoint.py
tests/utils/: runner_tests.py  test_compute_node.py  test_disk_quota.py  test_local_v1.py  test_local_v2.py  test_parallel_progress.py  test_remote_v1.py  test_remote_v2.py  test_vscode_utils.py
(+244 files in other folders)
