[tool.poetry]
name = "milatools"
version = "0.0.18"
description = "Tools to work with the Mila cluster"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mila-iqia/milatools"
repository = "https://github.com/mila-iqia/milatools"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
blessed = "^1.18.1"
sshconf = "^0.2.2"
questionary = "^1.10.0"
typing-extensions = "^4.7.1"
fabric = "^3.2.2"

[tool.poetry.dev-dependencies]
black = ">= 21.8b0"
isort = ">= 5.9.3"
flake8 = {version = ">= 6.0.0", python = "^3.8.1"}
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"
pytest = ">=7.2.0"
pytest-cov = ">=2.8.1"
coverage = {extras = ["toml"], version = "^5.0.3"}
toml = "^0.10.0"

[tool.poetry.scripts]
mila = "milatools.cli.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-regressions = "^2.4.2"
fabric = {extras = ["testing"], version = "^3.2.2"}
pytest-mock = "^3.11.1"
pytest-socket = "^0.6.0"
pytest-cov = "^4.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true


[tool.pytest.ini_options]
addopts = "--doctest-modules"
markers = "--enable-internet: Allow some tests to run using real connections to the cluster."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
