[tool.poetry]
name = "milatools"
version = "0.0.0"
description = "Tools to work with the Mila cluster"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mila-iqia/milatools"
repository = "https://github.com/mila-iqia/milatools"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
blessed = "^1.18.1"
sshconf = "^0.2.2"
questionary = "^1.10.0"
typing-extensions = "^4.7.1"
fabric = "^3.2.2"
tqdm = "^4.66.1"
rich = "^13.7.0"

[tool.poetry.scripts]
mila = "milatools.cli.__main__:main"

[tool.poetry.group.dev.dependencies]
black = ">= 21.8b0"
fabric = {extras = ["testing"], version = "^3.2.2"}
flake8 = {version = ">= 6.0.0", python = "^3.8.1"}
pytest = "^7.2.1"
pytest-mock = "^3.11.1"
pytest-regressions = "^2.4.2"
pytest-skip-slow = "^0.0.5"
pytest-socket = "^0.6.0"
pytest-timeout = "^2.2.0"
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"
toml = "^0.10.0"
pytest-asyncio = "^0.23.6"
pytest-testmon = "^2.1.1"
pytest-cov = "^5.0.0"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
markers = "--enable-internet: Allow some tests to run using real connections to the cluster."


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 88
indent-width = 4
# Add the pyupgrade and isort options in addition to the defaults.
select = ["E4", "E7", "E9", "F", "I", "UP"]



[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
